# ai-engineer-os

./: .env.example  .gitignore  CHANGELOG.md  README.md
.cursor/: README.md
.cursor/rules/: README.md
.github/: README.md
apps/: README.md
apps/leapma_web/: .gitignore  README.md  check_content.py  design_system.json  pyproject.toml  requirements.txt  test_client.py  wsgi.py
apps/leapma_web/content/python/: chapter_01.json  chapter_02.json  chapter_03.json  chapter_04.json  chapter_05.json  chapter_06.json  chapter_07.json  chapter_08.json  chapter_09.json  chapter_10.json  chapter_11.json  chapter_12.json  chapter_13.json  chapter_14.json  chapter_15.json  npcs.json  track.json
apps/leapma_web/leapma_web/: __init__.py  content_loader.py  db.py  entitlement.py  orientation.py  routes.py  rules_feedback.py  validation.py
apps/leapma_web/leapma_web/llm/: __init__.py  mock.py  openai_compatible.py
apps/leapma_web/leapma_web/static/: app.css
apps/leapma_web/leapma_web/templates/: base.html  chapter.html  dashboard.html  done.html  exercise.html  feedback.html  home.html  lesson.html  login.html  next_step.html  orient.html  probe.html  profile.html  progress.html  register.html  track.html
apps/leapma_web/schema/: 001_init.sql  002_track_progress.sql  003_concept_mode_default.sql  004_column_comments.sql
docs/: INDEX.md  README.md
docs/00_Project/: Current_State.md  Decision_Log.md  Open_Questions.md  Project_Dashboard.md  Project_Map.md  README.md  Roadmap.md
infrastructure/: README.md
scripts/: README.md
services/: README.md
tests/: README.md
(+98 files in other folders)
